--- a/HW5/trash/report1.Rmd
+++ b/HW5/trash/report1.Rmd
@@ -75,40 +75,37 @@ Koopman operator $\mathbf{A}$ is also used to make prediction so that $\mathbf{x
 #IV. Computational Results
 Overall, with **rank = 10**, across all 3 videos, we are able to separate the foreground (right) from the background (left). There are still some contours of the foreground residing in the extracted background, but those contours are completely unmoving.
 
-In the corgi surveillance video (figure 1), we can easily separate out the foreground (the moving corgi) and the background (the kitchen). In the video, the only thing moving is the corgi, while the surrounding background (the kitchen) is completely still. However, while we can extract all the corgi's movement into a separate foreground, we are unable to extract a clearer shape of the moving corgi. We surmise that this might due to the poor quality of the surveillance camera: The video is very blurry, showing poor sharpness and contrast between objects.
+In the corgi surveillance video **FIGURE**, we can easily separate out the foreground (the moving corgi) and the background (the kitchen). In the video, the only thing moving is the corgi, while the surrounding background (the kitchen) is completely still. However, while we can extract all the corgi's movement into a separate foreground, we are unable to extract a clearer shape of the moving corgi. We surmise that this might due to the poor quality of the surveillance camera: The video is very blurry, showing poor sharpness and contrast between objects.
 
-In the boxing surveillance video (figure 2), the foreground is the two moving boxers, and the background is the audience. There are some slight movements in the background (e.g the referee walking back and forth). However the algorithm extracts  out a very clear representation and movement of the two fighters. 
+In the boxing surveillance video **FIGURE**, the foreground is the two moving boxers, and the background is the audience. There are some slight movements in the background (e.g the referee walking back and forth). However the algorithm extracts  out a very clear representation and movement of the two fighters. 
 
-In the corgi twerking video (figure 3), the camera is moving so both the background and the foreground are moving. However the video quality is great, with clear sharpness and contrast between objects. The algorithm does a pretty good job separating out the main background, while still captures the shaking movement of the corgi.
+In the corgi twerking video, the camera is moving so both the background and the foreground are moving. However the video quality is great, with clear sharpness and contrast between objects. The algorithm does a pretty good job separating out the main background, while still captures the shaking movement of the corgi.
 
 ```{r, echo = FALSE}
 library(knitr)
 ```
 
 ```{r, echo = FALSE, fig.align="center"}
-include_graphics('corgi.png')
 ```
-Figure 1: Video surveillance featuring a corgi trying to climb through the fence. The only thing moving in the video is the corgi. The video has poor quality, and the images of the corgi are very blurry. Nonetheless the algorithm correctly captures all the movement of the dog into the foreground matrices.
+Figure 1: 
 
 ```{r, echo = FALSE, fig.align="center"}
-include_graphics('boxing.png')
-
 ```
-Figure 2: Video surveillance featuring a boxing fight between two people. The algorithm nicely separates out the foreground (the two fighters fighting) from the background (the audience), even though in some frames, the audience in the background are moving.
+Figure 2: Spectrograms of the music when undersampling (very large window translation) versus when oversampling (very small window translation)
 
 ```{r, echo = FALSE, fig.align="center"}
-include_graphics('corgi_twerk.png')
-
 ```
-Figure 3: Camera recording of a corgi twerking. Due to camera shakes, both the background and the foreground (the corgi) are moving. This has create challenges to the algorithm, but overall DMD still manages to capture the overall background and foreground.
+Figure 3:
 
 
 
 #V. Summary and Conclusions
 
-The effectiveness of the algorithm is affected by the quality of the movie clip: The boxing video has better quality e.g better light contrast. Whereas the corgi video has poorer quality where objects edges and contrasts are blurrier - the foreground seems "blend in" with the background, thus making it harder to extract a clear foreground. In the better video, the algorithm better separates the background and the foreground. The foreground is clearer. 
+> The effectiveness of the algorithm is affected by 
 
-We choose not to add the residual matrix back into the background. Doing so tends to put the details belonging to the foreground into the background.
+> the quality of the movie clip: The boxing video has better quality e.g better light contrast. Whereas the corgi video has poorer quality where objects edges and contrasts are blurrier - the foreground seems "blend in" with the background, thus making it harder to extract a clear foreground. In the better video, the algorithm better separates the background and the foreground. The foreground is clearer. 
+
+> Adding in the residuals into the X dmd low rank (the foreground) produces worse results.
 
 
 #Appendix A: MATLAB functions 
